# flute-webhooks-cli

./: AGENTS.md  CLAUDE.md  Cargo.toml  dist-workspace.toml  readme.md
.github/workflows/: build.yaml  release.yml
docs/superpowers/plans/: 2026-04-30-flute-webhooks-tui.md  2026-05-08-cli-webhook-commands.md
src/: cli.rs  config.rs  domain.rs  forward.rs  lib.rs  main.rs  poller.rs  update.rs  update_check.rs
src/api/: client.rs  error.rs  mod.rs  models.rs
src/auth/: keychain.rs  mod.rs  token.rs
src/cli/: mod.rs  output.rs  webhooks.rs
src/tui/: app.rs  mod.rs  modals.rs  ui.rs
tests/: api_client.rs  cli_webhooks.rs  tui_render.rs
