[package]
name = "flute-webhooks"
version = "0.2.0"
edition = "2024"
description = "Terminal UI and CLI for managing Flute webhook endpoints"
repository = "https://github.com/getflute/flute-webhooks"
homepage = "https://github.com/getflute/flute-webhooks"
license = "MIT"
readme = "readme.md"

[[bin]]
name = "flute-webhook"
path = "src/main.rs"

[lib]
name = "flute_webhook"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
toml = "0.8"
dirs = "5"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
rpassword = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
axoupdater = { version = "0.10.0", default-features = false, features = ["tokio", "github_releases"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
pretty_assertions = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
